--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
     </form>
   </header>
-<!--tasks to do-->
+<!--tasks to-->
   <main class="page-content">
     <section class="task-list-wrapper">
       <h2 class="list-title">Tasks To Do</h2>
